--- a/dbparam-service.properties
+++ b/dbparam-service.properties
@@ -1,4 +1,3 @@
-dbparams-service.url = ftp://audaxis@192.168.30.230/home/audaxis/Formation_Juillet_2023/_username_
-dbparams-service.port = 1521
+dbparams-service.url = jdbc:oracle:thin:@192.168.30.2:1521:orcl
 dbparams-service.username = ZK
 dbparams-service.password = compiere
