--- a/dbparam-service.properties
+++ b/dbparam-service.properties
@@ -3,5 +3,5 @@ dbparams-service.username = ZK
 dbparams-service.password = compiere
 
 spring.datasource.url=jdbc:oracle:thin:@192.168.30.110:1521:orcl
-spring.datasource.username=ZK
+spring.datasource.username=ZKh
 spring.datasource.password=compiere
