--- a/dbparam-service.properties
+++ b/dbparam-service.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:oracle:thin:@192.168.30.110:1521:orcl
-spring.datasource.username=ZKh
+spring.datasource.username=ZK
 spring.datasource.password=compiere
